--- a/charts/giropops-senhas/Chart.yaml
+++ b/charts/giropops-senhas/Chart.yaml
@@ -4,3 +4,8 @@ description: A Helm chart for Kubernetes deployment of my application
 type: application
 version: 0.1.0
 appVersion: "1.0"
+
+dependencies:
+  - name: kyverno
+    version: 2.7.2  # Substitua pela versão desejada
+    repository: https://kyverno.github.io/kyverno/
